Added default description as plugin name in case that description is empty

--- a/css/app.css
+++ b/css/app.css
@@ -248,7 +248,7 @@ footer{
 	
 	.modal-plugin-description {
 		max-height: 415px;
-		overflow-y: scroll;
+		overflow-y: auto;
 	}
 	
 	.modal-plugin-description p 
