--- a/js/templates/popup.html
+++ b/js/templates/popup.html
@@ -55,7 +55,7 @@
           </div>
           <div class="modal-body-right">
             <div class="modal-plugin-description">
-              <p>{{selectedPlugin.description}}</p>
+              <p>{{selectedPlugin.description || selectedPlugin.name}}</p>
             </div>
           </div>
         </div>
