--- a/css/app.css
+++ b/css/app.css
@@ -257,6 +257,12 @@ footer{
 		line-height: 1.5em;
 		color: #676767;
 	}
+.modal-backdrop {
+	background-color: #969696;
+}
+/*.modal-content{
+	border-radius: 0;
+}*/
 
 /* SLIDER */
 .carousel-inner>.item {
@@ -264,17 +270,54 @@ footer{
 }
 
 .carousel-caption p, .carousel-caption h4 {
-	color: #626262;
+	color: #0184C7; /*#626262;*/
 	text-shadow: 0 1px 2px rgba(200, 200, 200, 0.6);
 }
 
 .carousel-indicators .active{
-	background-color: #000;
+	background-color: #0EA6F3;
 }
 .carousel-indicators li{
-	border: 1px solid #000;
+	border: 1px solid #0EA6F3;
+	background: #C4E5F5;
 }
 
+@media screen and (min-width: 768px){
+
+	/*MODAL POPUP*/
+	.modal-content {
+		-webkit-box-shadow: none; 
+		box-shadow: none; 
+	}
+	.modal-content {
+		border-radius: 0;
+		-webkit-box-shadow: none;
+		box-shadow: none;
+	}
+
+	.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
+		margin-right: -15px;
+		background-color: rgba(200,200,200,0.5);
+		border-radius: 6px;
+		padding-top: 13px;
+	}
+	.carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev {
+		margin-left: -15px;
+		background-color: rgba(200,200,200,0.5);
+		border-radius: 6px;
+		padding-top: 13px;
+	}
+	.carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right, .carousel-control .icon-prev, .carousel-control .icon-next {
+		width: 40px;
+		height: 60px;
+		margin-top: -15px;
+		font-size: 30px;
+	}
+}
+
+.carousel-control.right, .carousel-control.left{
+	background-image: none;
+}
 
 /*ANGULAR ANIMATIONS */
 .animate-show {
