--- a/js/templates/popup.html
+++ b/js/templates/popup.html
@@ -23,7 +23,7 @@
             <div class="animate-show modal-element" ng-animate="'modal-element'" ng-show="imageVisible">
               <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
-                <ol class="carousel-indicators">
+                <ol class="carousel-indicators" data-ng-show="selectedPlugin.gallery.length > 1">
                   <li data-target="#carousel-example-generic" ng-repeat="gallery in selectedPlugin.gallery" data-slide-to="{{$index}}" ng-class="{active: $index==0}"></li>
                 </ol>
 
@@ -32,18 +32,18 @@
                   <div class="item" ng-repeat="gallery in selectedPlugin.gallery" ng-class="{active: $index==0}">
                     <img ng-src="{{gallery.img_url}}" alt="...">
                     <div class="carousel-caption">
-                      <h4>{{gallery.title}}</h4>
-                      <p>{{gallery.description}}</p>
+                      <h4>{{gallery.title || selectedPlugin.name}}</h4>
+                      <p>{{gallery.description || ''}}</p>
                     </div>
                   </div>
                 </div>
 
                 <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev" data-ng-show="selectedPlugin.gallery.length > 1">
                   <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
-                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next" data-ng-show="selectedPlugin.gallery.length > 1">
                   <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
