--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,6 @@
 body{
 	background-color: rgb(241, 241, 241);
-	font-weight: 100;
+	font-weight: 400;
 }
 
 .header, footer{
@@ -55,11 +55,11 @@ body{
 }
 
 .main-body{
-	margin-top: 35px;
+	margin: 35px auto;
 }
 
 footer{
-	position: fixed; /*relative;*/
+	position: relative; /*relative;*/
 	bottom: 0;
 	padding: 15px 0;
 }
@@ -145,7 +145,7 @@ footer{
 		margin-bottom: 0;
 		display: inline-block;
 		font-size: 2.7em;
-		font-weight: 200;
+		font-weight: 300;
 	}
 
 	.modal-title-container > a{
