Font weight changed

--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,6 @@
 body{
 	background-color: rgb(241, 241, 241);
-	font-weight: 400;
+	font-weight: 300;
 }
 
 .header, footer{
@@ -39,6 +39,7 @@ body{
 		vertical-align: top;
 		margin-left: 20px;
 		font-size: 1.3em;
+		font-weight: 300;
 	}
 	.form-search{
 		margin: 4px 0;
@@ -109,9 +110,11 @@ footer{
 }
 	.plugin-name{
 		font-size: 1.5em;
+		font-weight: 300;
 	}
 	.author-name{
 		color: #B5B5B5;
+		font-weight: 300;
 	}
 .item-img-wrapper > span{
 	position: absolute;
@@ -158,6 +161,7 @@ footer{
 	.modal-title-container > h5{
 		margin: 6px 0;
 		color: #9D9D9D;
+		font-weight: 300;
 	}
 
 	.modal-download-container{
@@ -244,6 +248,8 @@ footer{
 		color: #9D9D9D;
 		margin-left: 2%;
 		margin-bottom: 0;
+		font-weight: 300;
+		font-size: 15px;
 	}
 
 	.modal-plugin-description {
@@ -271,7 +277,8 @@ footer{
 
 .carousel-caption p, .carousel-caption h4 {
 	color: #0184C7; /*#626262;*/
-	text-shadow: 0 1px 2px rgba(200, 200, 200, 0.6);
+	text-shadow: 0 1px 2px rgba(234, 234, 234, 0.6);
+  font-weight: normal;
 }
 
 .carousel-indicators .active{
