Removed title and description for images, increased margin between slider bullets

--- a/js/templates/popup.html
+++ b/js/templates/popup.html
@@ -31,10 +31,10 @@
                 <div class="carousel-inner" role="listbox">
                   <div class="item" ng-repeat="gallery in selectedPlugin.gallery" ng-class="{active: $index==0}">
                     <img ng-src="{{gallery.img_url}}" alt="...">
-                    <div class="carousel-caption">
+                    <!--<div class="carousel-caption">
                       <h4>{{gallery.title || selectedPlugin.name}}</h4>
                       <p>{{gallery.description || ''}}</p>
-                    </div>
+                    </div>-->
                   </div>
                 </div>
 
