--- a/css/app.css
+++ b/css/app.css
@@ -277,16 +277,18 @@ footer{
 
 .carousel-caption p, .carousel-caption h4 {
 	color: #0184C7; /*#626262;*/
-	text-shadow: 0 1px 2px rgba(234, 234, 234, 0.6);
+	text-shadow: 0 1px 2px rgba(234, 234, 234, 0.3);
   font-weight: normal;
 }
 
 .carousel-indicators .active{
 	background-color: #0EA6F3;
+	margin-right: 8px;
 }
 .carousel-indicators li{
 	border: 1px solid #0EA6F3;
 	background: #C4E5F5;
+	margin-right: 8px;
 }
 
 @media screen and (min-width: 768px){
@@ -304,7 +306,7 @@ footer{
 
 	.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
 		margin-right: -15px;
-		background-color: rgba(200,200,200,0.5);
+		background-color: rgba(200,200,200,0.3);
 		border-radius: 6px;
 		padding-top: 13px;
 	}
